# Image-Processing

./: CMakeLists.txt  Image.h  OpenCVTest.sln  OpenCVTest.vcxproj  OpenCVTest.vcxproj.filters  README.md  base64.h  main.cpp  matrix.h  neural.h
dft/: 1.ppm  2.ppm  dogSFT.ppm  dogSFT2.ppm  img1SHIFT.ppm  img2SHIFT.ppm  ladySFT.ppm  ladySFT2.ppm  mag.ppm  parotIm.ppm
img/: motylB.ppm
smpls/: IDFT.ppm  dog.ppm  dog2.ppm  dogDrawn.ppm  dogDrawn2.ppm  homer.ppm  lady.ppm  lady2.ppm  moose.ppm  motyl.ppm  motyl2.ppm  old.ppm  papousek.ppm  parot.ppm
src/: Convertor.h  Image.h  main.cpp  matrix.h
